# paga-eval

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  openapi.json  pyproject.toml
.github/workflows/: ci.yml  security.yml
benchmarks/: starter_en_us.json
constraints/: service-py312.txt
docs/: DEMO_VIDEO_SCRIPT.md  ELLO_VP_BRIEF.md  INSTITUTIONAL_DEPLOYMENT.md  RELEASE_CHECKLIST.md  showcase_video.html
docs/assets/: paga-eval-demo.webm  paga-eval-showcase.webm
examples/: acoustic_gate_demo.py  acoustic_gate_simple_demo.html  acoustic_gate_ui_demo.html  district_policy_pack.json  institution_demo.html  institution_demo_app.py  institutional_quality_report.py  langgraph_tutor_eval.py  run_institution_demo.py  run_service.py
paga/: __init__.py  api.py  benchmark.py  healthcheck.py  integrations.py  maintenance.py  metrics.py  reporting.py  storage.py
scripts/: build_showcase_assets.mjs  docker_smoke.ps1  export_openapi.py  generate_sbom.ps1  record_demo_video.mjs
tests/: test_api.py  test_benchmark.py  test_contract.py  test_demo.py  test_integrations.py  test_maintenance.py  test_phoneme_engine.py  test_reporting.py  test_storage.py
